# inferx-dify-plugin

./: .difyignore  README.md  manifest.yaml  pyproject.toml  requirements.txt  slots.py
models/llm/: llm.py  qwen3-35b-a3b-fp8.yaml
models/rerank/: qwen3-reranker-0.6b.yaml  rerank.py
models/text_embedding/: qwen3-embedding-0.6b.yaml  text_embedding.py
provider/: inferx.py  inferx.yaml
