[project]
name = "inferx"
version = "0.1.0"
description = "InferX model provider plugin for Dify"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify_plugin>=0.5.0",
    "requests>=2.31.0",
    "numpy~=2.1.3",
]

[dependency-groups]
dev = []
